# YFanRAG

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  README.md  README.zh-CN.md  pyproject.toml  pytest.ini
docs/: README.md  README.zh-CN.md  TECHNICAL.md  TECHNICAL.zh-CN.md  architecture.md  architecture.zh-CN.md  cli.md  cli.zh-CN.md  development.md  development.zh-CN.md  getting-started.md  getting-started.zh-CN.md  gui.md  gui.zh-CN.md  performance.md  performance.zh-CN.md
examples/: 01_basic_ingest_query.py  02_hybrid_query.py  03_benchmark.py  04_tk_chat_app.py  README.md  README.zh-CN.md
scripts/: perf_benchmark.py  release.ps1  release.py
tests/: test_benchmark.py  test_chat_providers.py  test_chunking.py  test_config.py  test_duckdb_vss_store.py  test_embedder_http.py  test_feedback_loop.py  test_gui_chat_traceability.py  test_hybrid_retriever.py  test_io_utils.py  test_knowledge_base.py  test_loader_text.py  test_migrations.py  test_migrations_cross.py  test_observability.py  test_pipeline.py  test_secure_config.py  test_sqlite_fts.py  test_sqlite_vec1_store.py  test_sqlite_vec_store.py  test_vectorstore.py
yfanrag/: __init__.py  benchmark.py  chat_providers.py  chunking.py  cli.py  config.py  embedders.py  feedback_loop.py  fts.py  interfaces.py  io_utils.py  knowledge_base.py  migrations.py  models.py  observability.py  pipeline.py  retrievers.py  secure_config.py  security.py  sql_utils.py  tk_chat_app.py
yfanrag/gui/: __init__.py  app.py  events.py  markdown.py
yfanrag/loaders/: __init__.py  base.py  text.py
yfanrag/vectorstores/: __init__.py  (+4 more)
(+6 files in other folders)
