[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yfanrag"
version = "0.0.1"
description = "Minimal local RAG toolkit for personal developers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "YFanRAG" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
sqlite = [
    "sqlite-vec>=0.1.8",
]
duckdb = [
    "duckdb>=1.0.0",
]
rerank = [
    "sentence-transformers>=2.7.0",
]
secure = [
    "keyring>=25.0",
]

[project.scripts]
yfanrag = "yfanrag.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
